# D-ploiement-d-une-Application-Streamlit

./: README.md  app.py  app_data.csv  packages.txt  pratik_cours1_mlops.ipynb  pyproject.toml  requirements.txt
MLOPS_DAH/: app_data.csv
