[project]
name = "mlops-dah"
version = "0.1.0"
description = ""
authors = [
    {name = "GBE7",email = "veh.gbe24@inphb.ci"}
]

requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.51.0,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)"
]
[tool.poetry]
packages = [
    { include = "mlops_dah" }
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
